fix extra spaces

--- a/public/css/add_todo.css
+++ b/public/css/add_todo.css
@@ -1,25 +1,24 @@
 <style>
-
-#form{
+  #form{
 	position: center;
-  }
-.navbar_lists{
+    }
+  .navbar_lists{
     font-size: 150%;
     font-family: serif;
-  }
-#heading{
+    }
+  #heading{
     background-color: black;
-  }
-.form-horizontal{
+   }
+  .form-horizontal{
 	margin-top:10%;
 	margin-left: 2%;
     margin-right: 5%;
-  }
-
-.form-control{
+   }
+  .form-control{
 	width: 80%
-}
-#search {width: 125px;
+   }
+  #search {
+    width: 125px;
     height: 35px;
     border: 1px solid #A56161;
     cursor: pointer;
@@ -30,7 +29,5 @@
     padding: 6px;
     margin-top:2%;
     margin-left:38%;
-}
-
-
+  }
 </style>
